fixing gap issue

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     height: 100vh;
     width: 100%;
     display: flex;
-    gap: 200px;
+    gap: 150px;
     justify-content: center;
     align-items: center;
     overflow: auto;
